# GeoNexus

./: .gitignore  .npmrc  GITHUB_RELEASE_TEMPLATE.md  PRIMER_RELEASE.md  README.md  TEST_PROMPTS.md  cambios-backend-ia.txt  chat-architecture.txt  coding_agent_analysis.txt  gitdiff.txt  index.html  latest.json.example  package.json  pipeline-geo-agents.txt  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.cjs  tauri.conf.json  test_llm_providers.ps1  tsconfig.json  vite.config.ts
agent/: IDENTITY.md  (+3 more)
crates/geonexus-core/: Cargo.toml
crates/geonexus-core/src/: agent.rs  allowlist.rs  chat.rs  config.rs  connector.rs  crypto.rs  gateway.rs  lib.rs  local_connector.rs  reasoning.rs  subagent.rs
crates/geonexus-core/src/agents/: coding.rs  mod.rs  registry.rs
crates/geonexus-core/src/allowlist/: mod.rs  tests.rs
crates/geonexus-core/src/chat/: mod.rs  tests.rs  types.rs
crates/geonexus-core/src/connector/: local.rs  mod.rs  tests.rs  types.rs
crates/geonexus-core/src/events/: bus.rs  mod.rs  types.rs
crates/geonexus-core/src/security/: credential_policy.rs  mod.rs  token_fingerprint.rs
crates/geonexus-core/src/telegram/: mod.rs  polling.rs  sender.rs
crates/geonexus-core/src/types/: asset.rs  chunk.rs  graph.rs  mod.rs  sync.rs  task.rs  tests.rs
crates/geonexus-core/src/workers/: handler.rs  mod.rs
crates/geonexus-core/src/workers/tasks/: classifier.rs  embedder.rs  graph.rs  indexer.rs  mod.rs
crates/geonexus-db/: Cargo.toml
crates/geonexus-db/migrations/: 20260607000000_init.sql  20260607000001_phase3.sql  20260607000002_phase4_containers_mcp.sql  20260608000003_conversations.sql  20260609000004_chat_sources_tool_log.sql  20260609000005_web_search.sql  20260610000006_message_stats.sql  20260610000007_analysis_sessions.sql  20260611000000_graph_events.sql  20260612000000_graph_persist.sql  20260612000001_agent_tasks.sql  20260613000001_mcp_servers_tools_audit.sql  20260613000002_app_settings.sql  20260613000003_skills.sql  20260613000004_mcp_server_metrics.sql  20260614000001_mcp_add_auth_token.sql  20260615000001_mcp_servers_add_transport.sql  20260616000001_mcp_tools_add_updated_at.sql  20260617000000_graph_memory.sql  20260618000000_add_message_attachments.sql  20260619000000_mcp_allowlist_rate_limit.sql  20260620000000_events_artifacts.sql  20260620000003_telegram_audit_log.sql  20260621000000_fs_mcp_audit.sql  20260622000000_geo_events.sql  20260623000000_phase3_exact.sql  20260624000001_conversation_archiving.sql  20260625000000_agent_task_board.sql  20260627000000_agent_model_name.sql  20260628000000_add_reasoning_events.sql  20260701000000_messages_fts.sql  20260702000000_curated_memory.sql  20260703000000_automations.sql  20260704000000_user_profile.sql  20260705000000_skill_feedback.sql  20260706000000_patch_proposals.sql
crates/geonexus-db/src/: agent_repo.rs  analysis_repo.rs  artifact_repo.rs  automation_repo.rs  chat_repo.rs  connector_repo.rs  data_repo.rs  event_repo.rs  geo_event_repo.rs  lib.rs  memory_repo.rs  patch_repo.rs  task_queue.rs  user_profile_repo.rs
crates/geonexus-db/src/analysis_repo/: cost.rs  export.rs  metrics.rs  mod.rs
crates/geonexus-db/src/chat_repo/: conversations.rs  messages.rs  mod.rs  tests.rs
crates/geonexus-db/src/connector_repo/: configs.rs  files.rs  mod.rs  tests.rs
crates/geonexus-db/src/data_repo/: assets.rs  chunks.rs  graph.rs  init.rs  metrics.rs  mod.rs  tests.rs
crates/geonexus-db/src/skills/: injector.rs  mod.rs  parser.rs  registry.rs  types.rs
crates/geonexus-fs-mcp/: Cargo.toml
crates/geonexus-fs-mcp/src/: config.rs  facade.rs  lib.rs  timeline.rs  worker.rs
crates/geonexus-fs-mcp/src/analyzer/: framework_detect.rs  mod.rs
crates/geonexus-fs-mcp/src/analyzer/templates/: mod.rs
crates/geonexus-fs-mcp/src/commands/: analyze_project.rs  copy_file.rs  create_file.rs  create_folder.rs  create_project.rs  delete_file.rs  detect_framework.rs  list_directories.rs  list_files.rs  mod.rs  move_file.rs  read_file.rs  search_files.rs  update_file.rs
crates/geonexus-fs-mcp/src/indexer/: embeddings.rs  fts_index.rs  hybrid_search.rs  mod.rs
crates/geonexus-fs-mcp/src/security/: confirm_gate.rs  guard_chain.rs  level_guard.rs  mod.rs  path_guard.rs  rate_guard.rs
crates/geonexus-mcp/: Cargo.toml
crates/geonexus-mcp/src/: constants.rs  containers.rs  executor.rs  handshake.rs  lib.rs  pinger.rs  registry.rs  stdio.rs  tool_catalog.rs  types.rs
crates/geonexus-mcp/src/containers/: mod.rs  schema.rs  tests.rs
crates/geonexus-scheduler/: Cargo.toml
crates/geonexus-scheduler/src/: cron.rs  lib.rs  worker.rs
crates/geonexus-tauri/: Cargo.toml  tauri.conf.json
crates/geonexus-tauri/capabilities/: default.json
crates/geonexus-tauri/icons/: icon.icns
crates/geonexus-tauri/src/: builtin_skills.rs  main.rs
crates/geonexus-tauri/src/commands/: agent.rs  agent_identity.rs  analysis.rs  audio.rs  chat.rs  coding_agent.rs  connector.rs  containers_mcp.rs  data.rs  document.rs  events.rs  filesystem.rs  graph_events.rs  health_check.rs  llm.rs  mod.rs  notification_emitter.rs  notifications.rs  oauth.rs  scheduler.rs  secure.rs  settings.rs  skills.rs  subagent.rs  telegram.rs
crates/geonexus-tauri/src/commands/agent/: crud.rs  mod.rs  pipeline.rs  tasks.rs
crates/geonexus-tauri/src/commands/chat/: classifier.rs  context.rs  messages.rs  mod.rs  search.rs  send_message.rs  stats.rs  tools.rs  validator.rs
(+606 files in other folders)
