[package]
name = "geonexus-core"
version = "0.2.0"
edition = "2021"

[lib]
name = "geonexus_core"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
thiserror = "1"

[dev-dependencies]
