[package]
name = "geonexus-fs-mcp"
version = "0.1.0"
edition = "2021"

[lib]
name = "geonexus_fs_mcp"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
tracing = "0.1"
chrono = "0.4"
tokio = { version = "1", features = ["time", "sync", "rt", "macros", "fs"] }
async-trait = "0.1"
sha2 = "0.10"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros"] }
geonexus-core = { path = "../geonexus-core" }

[dev-dependencies]
tempfile = "3"
