[package]
name = "geonexus-mcp"
version = "0.1.0"
edition = "2021"

[lib]
name = "geonexus_mcp"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
chrono = "0.4"
