[package]
name = "geonexus-tauri"
version = "0.1.0"
edition = "2021"

[dependencies]
geonexus-core = { path = "../geonexus-core" }
geonexus-db = { path = "../geonexus-db" }
geonexus-mcp = { path = "../geonexus-mcp" }
tauri = { version = "2", features = [] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }
