[package]
name = "geonexus-tauri"
version = "0.1.5"
edition = "2021"

[dependencies]
geonexus-core = { path = "../geonexus-core" }
geonexus-db = { path = "../geonexus-db" }
geonexus-mcp = { path = "../geonexus-mcp" }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["time"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
notify = { version = "6.1", optional = true }
tokio-stream = { version = "0.1", optional = true }
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"
notify-rust = "4"

[features]
default = ["dialog"]
dialog = ["tauri-plugin-dialog"]
stronghold = ["tauri-plugin-stronghold"]
watcher = ["notify", "tokio-stream"]

[dependencies.tauri-plugin-dialog]
version = "2"
optional = true

[dependencies.tauri-plugin-stronghold]
version = "2"
optional = true

[build-dependencies]
tauri-build = { version = "2", features = [] }
